fix(web.navbar): add button to close sidebar on mobile

--- a/packages/manager/apps/web/client/app/css/less/common/navbar.less
+++ b/packages/manager/apps/web/client/app/css/less/common/navbar.less
@@ -1,3 +1,10 @@
+.navbar-toggle {
+  top: 0;
+  left: 0;
+  width: 48px;
+  height: 44px;
+}
+
 .left-0 {
   left: 0;
 }
